--- a/opinion-ate/package.json
+++ b/opinion-ate/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.2.1",
+    "@testing-library/user-event": "14.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -18,21 +18,21 @@
     "lint": "eslint src",
     "eject": "react-scripts eject"
   },
-  "eslintConfig":  {
+  "eslintConfig": {
     "extends": [
-    "react-app",
-    "react-app/jest",
-    "prettier"
+      "react-app",
+      "react-app/jest",
+      "prettier"
     ],
     "plugins": [
-    "prettier",
-    "cypress"
+      "prettier",
+      "cypress"
     ],
     "env": {
-    "cypress/globals": true
+      "cypress/globals": true
     },
     "rules": {
-    "prettier/prettier": "warn"
+      "prettier/prettier": "warn"
     }
   },
   "prettier": {
