--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.8",
     "dotenv": "^8.1.0",
     "express": "^4.16.4",
     "mysql": "^2.17.1",
