--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.8",
-    "dotenv": "^8.1.0",
+    "dotenv": "8.1.0",
     "express": "^4.16.4",
+    "firebase-admin": "8.6.0",
+    "jsonwebtoken": "^9.0.0",
     "mysql": "^2.17.1",
     "node-fetch": "^2.6.1",
     "nodemon": "^1.19.3",
