--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.11.9",
     "install": "^0.12.2",
     "mathjs": "^5.10.3",
+    "moment": "^2.29.4",
     "node-fetch": "^2.6.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
