--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "install": "^0.12.2",
     "mathjs": "^5.10.3",
     "moment": "^2.29.4",
+    "mui": "^0.0.1",
     "node-fetch": "^2.6.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
