--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mui/material": "^5.11.8",
     "dotenv": "8.1.0",
     "express": "^4.16.4",
+    "firebase": "8.10.0",
     "firebase-admin": "8.6.0",
     "jsonwebtoken": "^9.0.0",
     "mysql": "^2.17.1",
