--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.11.9",
     "@testing-library/jest-dom": "^5.16.5",
     "firebase": "^8.10.0",
+    "firestore": "^1.1.6",
     "install": "^0.12.2",
     "mathjs": "^5.10.3",
     "moment": "^2.29.4",
