--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.16.4",
     "firebase": "^8.10.0",
     "firebase-admin": "8.6.0",
+    "firestore": "^1.1.6",
     "jsonwebtoken": "^9.0.0",
     "mysql": "^2.17.1",
     "node-fetch": "^2.6.1",
